sass/default.scss
$css-var-prefix: '';

@import '@picocss/pico/scss/pico';
@import '@picocss/pico/scss/colors/index';

@import 'mixins';
@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css');

:root {
	--success: #{$green-400};
	--success-hover: #{$green-350};
	--success-focus: #{rgba($green-400, 0.125)};
	--success-inverse: #{$white};

	--warning: #{$amber-250};
	--warning-hover: #{$amber-350};
	--warning-focus: #{rgba($amber-250, 0.125)};
	--warning-inverse: #{$white};

	--error: #{$red-500};
	--error-hover: #{$red-550};
	--error-focus: #{rgba($red-500, 0.125)};
	--error-inverse: #{$white};

	--success-h1-color: #{$green-400};
	--success-h2-color: #{mix($green-400, $green-350)};
	--success-h3-color: #{$green-350};
	--success-h4-color: #{mix($green-350, $green-300)};
	--success-h5-color: #{$green-300};
	--success-h6-color: #{mix($green-300, $green-250)};

	--warning-h1-color: #{$amber-250};
	--warning-h2-color: #{mix($amber-250, $amber-200)};
	--warning-h3-color: #{$amber-200};
	--warning-h4-color: #{mix($amber-200, $amber-150)};
	--warning-h5-color: #{$amber-150};
	--warning-h6-color: #{mix($amber-150, $amber-100)};

	--error-h1-color: #{$red-500};
	--error-h2-color: #{mix($red-500, $red-450)};
	--error-h3-color: #{$red-450};
	--error-h4-color: #{mix($red-450, $red-400)};
	--error-h5-color: #{$red-400};
	--error-h6-color: #{mix($red-400, $red-350)};

	--spacing: 0.5rem;
	--typography-spacing-vertical: 0.75rem;
	--nav-element-spacing-vertical: 0.5rem;
	--form-element-spacing-vertical: 0.25rem;
}

h1 {
	--typography-spacing-vertical: 1.5rem;
}

h2 {
	--typography-spacing-vertical: 1.3125rem;
}

h3 {
	--typography-spacing-vertical: 1.125rem;
}

h4 {
	--typography-spacing-vertical: 0.937rem;
}

h5 {
	--typography-spacing-vertical: 0.84375rem;
}

.row {
	display: flex;
	flex-direction: row;
	gap: var(--grid-spacing-horizontal);

	&:is(.c, .cr, .cl) * {
		flex-basis: content;
		height: fit-content;
		margin-right: 0;
	}

	&.cr {
		justify-content: flex-end;
	}

	&.cl {
		justify-content: flex-start;
	}

	&.center {
		align-items: center;
	}
}

.col {
	display: flex;
	flex-direction: column;
	gap: var(--grid-spacing-horizontal);

	* {
		width: fit-content;
		margin-bottom: 0;
	}

	&.center {
		align-items: center;
	}
}

$statuses: success, warning, error;
$heading-orders: 1, 2, 3, 4, 5, 6;

@each $status in $statuses {
	:is(button, input[type='submit'], input[type='button'], [role='button']).#{$status} {
		@include btn-ext($status);
	}

	:is(button, input[type='submit'], input[type='button'], [role='button']).outline.#{$status} {
		@include outline-ext($status);
	}
}

@each $status in $statuses {
	:is(address, blockquote, dl, figure, form, ol, p, pre, table, ul).#{$status} {
		color: var(--#{$status});
	}

	@each $order in $heading-orders {
		h#{$order}.#{$status} {
			--color: var(--#{$status}-h#{$order}-color);
		}
	}
}

